transitivity pruned