@@ -2,6 +2,7 @@ package HyDCFinalVersion;
 
 import Hydra.de.hpi.naumann.dc.algorithms.hybrid.ResultCompletion;
 import Hydra.de.hpi.naumann.dc.cover.PrefixMinimalCoverSearch;
+import Hydra.de.hpi.naumann.dc.denialcontraints.DenialConstraint;
 import Hydra.de.hpi.naumann.dc.denialcontraints.DenialConstraintSet;
 import Hydra.de.hpi.naumann.dc.evidenceset.HashEvidenceSet;
 import Hydra.de.hpi.naumann.dc.evidenceset.IEvidenceSet;
@@ -32,53 +33,59 @@ public class RunHyDCFinalVersion {
 
     /**
      * */
-    public static Map<Predicate, Integer> predicateIntegerMap = new HashMap<>();
-    static Map<Predicate, Integer> predicateIntegerMap2 = new HashMap<>();
+//    public static Map<Predicate, Integer> predicateIntegerMap = new HashMap<>();
+//    static Map<Predicate, Integer> predicateIntegerMap2 = new HashMap<>();
+
+    public static IEvidenceSet samplingEvidence;
     public static void main(String[] args) throws IOException, InputIterationException {
         long l1 = System.currentTimeMillis();
-        String file ="dataset//Tax10k.csv";
-        int size = 1000;
+        String file ="dataset//CLAIM.csv";
+        int size = 50000;
+//         file ="dataset//Tax10k.csv";
+//         size = 10000;
 
-
+         //-verbose:gc
+        //-XX:+PrintGCDetails
         File datafile = new File(file);
         RelationalInput data = new RelationalInput(datafile);
         Input input = new Input(data,size);
 
         // Get predicates
         PredicateBuilder predicates = new PredicateBuilder(input, false, 0.3d);
-//        PredicateBuilder predicates = new PredicateBuilder(new File("src/HyDCFinalVersion/Predicates.txt"), input);
+//        PredicateBuilder predicates = new PredicateBuilder(new File("dataset/Tax10kPredicates"), input);
         // Sampling
         IEvidenceSet sampleEvidenceSet = new SystematicLinearEvidenceSetBuilder(predicates,
                 sampleRounds).buildEvidenceSet(input);
         HashEvidenceSet set = new HashEvidenceSet();
         sampleEvidenceSet.getSetOfPredicateSets().forEach(i -> set.add(i));
 
+        samplingEvidence = sampleEvidenceSet;
+
         //get the sampling  evidence set
         IEvidenceSet fullSamplingEvidenceSet = new ColumnAwareEvidenceSetBuilder(predicates).buildEvidenceSet(set, input, efficiencyThreshold);
 
-        printPredicateToEvidence( fullSamplingEvidenceSet);
+//        printPredicateToEvidence( fullSamplingEvidenceSet);
         // calculate selectivity and sort for predicate
-        calculatePredicate( set);
+//        calculatePredicate( set);
 
         // HyDC begin
         MMCSDC mmcsdc = new MMCSDC(predicates.getPredicates().size(), fullSamplingEvidenceSet, predicates, input);
 
+        sampleEvidenceSet = null;
+        fullSamplingEvidenceSet = null;
         System.out.println("mmcs and get dcs cost:" + (System.currentTimeMillis() - l1));
 
-        System.out.println("mmcs node " + mmcsdc.getCoverNodes());
+//        System.out.println("mmcs node " + mmcsdc.getCoverNodes());
 
         DenialConstraintSet denialConstraintSet = new DenialConstraintSet();
-//        System.out.println(mmcsdc.getCoverNodes().size());
-//        mmcsdc.getCoverNodes().forEach(mmcsNode -> {
-//            denialConstraintSet.add(mmcsNode.getDenialConstraint());
-//        });
         denialConstraintSet = mmcsdc.denialConstraintSet;
 
 
+        mmcsdc = null;
 
         System.out.println(denialConstraintSet.size());
         l1 = System.currentTimeMillis();
-        printPredicateToEvidence(denialConstraintSet );
+//        printPredicateToEvidence(denialConstraintSet );
         denialConstraintSet.minimize();
         System.out.println("dcs :" + denialConstraintSet.size());
         System.out.println("minimize cost:" + (System.currentTimeMillis() - l1));
@@ -90,22 +97,24 @@ public class RunHyDCFinalVersion {
         System.out.println("singel predicate valid count " + TimeCal2.getTime(4));
         System.out.println("double predicates valid  count " + TimeCal2.getTime(5));
 
-        List<Map.Entry<Predicate, Long>> list = new ArrayList<>(TimeCal3.time.entrySet());
-        Collections.sort(list, new Comparator<Map.Entry<Predicate, Long>>() {
-            @Override
-            public int compare(Map.Entry<Predicate, Long> o1, Map.Entry<Predicate, Long> o2) {
-                return o1.getValue().compareTo(o2.getValue());
-            }
-        });
+//        System.out.println(dcsApprox.size() + " == ? " + MMCSDC.cal);
 
-        for (Map.Entry<Predicate, Long> entry : list){
-            System.out.println(entry.getKey() + "  refine time: " + entry.getValue() +"  refine count: " + TimeCal3.getPreCalTime(entry.getKey()) +  "  dcs count :" + predicateIntegerMap2.get(entry.getKey()) + "  cover count :" + predicateIntegerMap.get(entry.getKey()));
-        }
-
-        for (Predicate predicate: predicates.getPredicates()){
-            System.out.println(predicate);
-        }
-        IndexProvider<Predicate> predicateIndexProvider = PredicateBitSet.indexProvider;
+//        List<Map.Entry<Predicate, Long>> list = new ArrayList<>(TimeCal3.time.entrySet());
+//        Collections.sort(list, new Comparator<Map.Entry<Predicate, Long>>() {
+//            @Override
+//            public int compare(Map.Entry<Predicate, Long> o1, Map.Entry<Predicate, Long> o2) {
+//                return o1.getValue().compareTo(o2.getValue());
+//            }
+//        });
+//
+//        for (Map.Entry<Predicate, Long> entry : list){
+//            System.out.println(entry.getKey() + "  refine time: " + entry.getValue() +"  refine count: " + TimeCal3.getPreCalTime(entry.getKey()) +  "  dcs count :" + predicateIntegerMap2.get(entry.getKey()) + "  cover count :" + predicateIntegerMap.get(entry.getKey()));
+//        }
+//
+//        for (Predicate predicate: predicates.getPredicates()){
+//            System.out.println(predicate);
+//        }
+//        IndexProvider<Predicate> predicateIndexProvider = PredicateBitSet.indexProvider;
         //singel predicate valid count 1119207
         //double predicates valid  count 396280
 
@@ -124,30 +133,30 @@ public class RunHyDCFinalVersion {
         });
     }
 
-    public static void printPredicateToEvidence( IEvidenceSet iEvidenceSet){
-
-        iEvidenceSet.forEach(predicates1 -> {
-            predicates1.forEach(predicate -> {
-                if (predicateIntegerMap.containsKey(predicate)){
-                    predicateIntegerMap.put(predicate, predicateIntegerMap.get(predicate) + 1);
-                }else{
-                    predicateIntegerMap.put(predicate, 1);
-                }
-            });
-        });
-    }
-    public static void printPredicateToEvidence(DenialConstraintSet denialConstraintSet){
-
-        denialConstraintSet.forEach(predicates1 -> {
-            predicates1.getPredicateSet().forEach(predicate -> {
-                if (predicateIntegerMap2.containsKey(predicate)){
-                    predicateIntegerMap2.put(predicate, predicateIntegerMap2.get(predicate) + 1);
-                }else{
-                    predicateIntegerMap2.put(predicate, 1);
-                }
-            });
-        });
-    }
+//    public static void printPredicateToEvidence( IEvidenceSet iEvidenceSet){
+//
+//        iEvidenceSet.forEach(predicates1 -> {
+//            predicates1.forEach(predicate -> {
+//                if (predicateIntegerMap.containsKey(predicate)){
+//                    predicateIntegerMap.put(predicate, predicateIntegerMap.get(predicate) + 1);
+//                }else{
+//                    predicateIntegerMap.put(predicate, 1);
+//                }
+//            });
+//        });
+//    }
+//    public static void printPredicateToEvidence(DenialConstraintSet denialConstraintSet){
+//
+//        denialConstraintSet.forEach(predicates1 -> {
+//            predicates1.getPredicateSet().forEach(predicate -> {
+//                if (predicateIntegerMap2.containsKey(predicate)){
+//                    predicateIntegerMap2.put(predicate, predicateIntegerMap2.get(predicate) + 1);
+//                }else{
+//                    predicateIntegerMap2.put(predicate, 1);
+//                }
+//            });
+//        });
+//    }
 
 
 }
